fix: background and size first wrap

--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,6 @@
   justify-content: center;
   max-width: 100%;
   background-image: url(../img/jumbo.png);
-  background-size: contain;
   background-repeat: round;
 }
 
@@ -82,16 +81,15 @@
 
 h1{
   color: white;
-  font-size: 55px;
+  font-size: 70px;
   margin-bottom: inherit;
-  padding-top: 56px
+  padding-top: 35px
 }
 
 .paragraph-first-box {
   color: white;
-  font-size: 20px;
-  line-height: 37px;
-  letter-spacing: -0.5px
+  font-size: 24px;
+  line-height: 37px
 }
 
 .buttons_paragraph {
